# windows_find_personal_files

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  wpa.cmd
.github/workflows/: ci.yml
crates/wpa_scan/: Cargo.toml
crates/wpa_scan/src/: lib.rs  main.rs
docs/: DECISIONS.md  REQUIREMENTS.md  RESTORE.md  SPEC.md
docs/feature_bloat/: .gitkeep
scripts/: bootstrap.ps1  build-rust.ps1  publish-github.ps1
src/windows_personal_archive/: __init__.py  __main__.py
src/windows_personal_archive/archive/: writer.py
src/windows_personal_archive/cli/: __init__.py  main.py
src/windows_personal_archive/config/: __init__.py  loader.py  models.py
src/windows_personal_archive/manifest/: models.py  writer.py
src/windows_personal_archive/platform/: __init__.py  windows.py
src/windows_personal_archive/restore/: restorer.py
src/windows_personal_archive/scan/: classify.py  known_apps.py  path_map.py  planner.py  rules.py  walker.py
src/windows_personal_archive/verify/: checksum.py
tests/fixtures/minimal_tree/Users/alice/Documents/: notes.txt
tests/integration/: test_scan_fixture.py
tests/unit/: test_archive_writer.py  test_classify.py  test_path_map.py  test_rules.py  test_version.py
