[project]
name = "windows-personal-archive"
version = "0.1.0"
description = "Scan Windows drives and archive personal files for migration to another PC"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Thomas" }]
keywords = ["windows", "migration", "backup", "archive", "personal-files"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
wpa = "windows_personal_archive.cli.main:main"

[project.urls]
Repository = "https://github.com/thoma/windows_find_personal_files"
Documentation = "https://github.com/thoma/windows_find_personal_files/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/windows_personal_archive"]

[dependency-groups]
dev = [
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"src/windows_personal_archive/cli/*.py" = ["B008"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
